# weather_api_rust

./: .gitignore  Cargo.toml  Dockerfile.build.ubuntu18.04  Makefile  README.md  rustfmt.toml
.github/workflows/: rust.yml
migrations/: V01__weather_data.sql  V02__weather_data_server.sql  V03__weather_location_cache.sql  V04__drop_unique_location.sql  V06__key_item_cache.sql
scripts/: Dockerfile  bootstrap_db.sh  build_deb_docker.sh  build_wasm.sh  openapi.yaml
src/: api_options.rs  app.rs  config.rs  country_code_wrapper.rs  date_time_wrapper.rs  errors.rs  html_response.rs  json_response.rs  latitude_wrapper.rs  lib.rs  logged_user.rs  longitude_wrapper.rs  main.rs  model.rs  parse_opts.rs  pgpool.rs  polars_analysis.rs  routes.rs  s3_sync.rs  timestamp.rs  weather_app_desktop.rs  weather_element.rs  weatherapp.rs
templates/: PLOT_TEMPLATE.html  PLOT_TEMPLATE.html.hbr  TIMESERIESTEMPLATE.js  TIMESERIESTEMPLATE.js.hbr  style.css  timeseries.js
tests/: config.env
weather_api_common/: Cargo.toml
weather_api_common/src/: lib.rs  non_wasm_utils.rs  wasm_components.rs  wasm_utils.rs  weather_element.rs
weather_api_wasm/: Cargo.toml
weather_api_wasm/src/: main.rs
weather_app_desktop/: Cargo.toml
weather_app_desktop/src/: main.rs
weather_app_wasm/: Cargo.toml  index.html
weather_app_wasm/src/: main.rs
