[package]
name = "weather_api_rust"
version = "0.7.31"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "weather-api-rust"
priority = "optional"
section = "rust"
provides = "sync-app-rust"
extended-description = """\
Weather API."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "weather_api_common",
    "weather_app_desktop",
]
exclude = [
    "weather_app_wasm",
    "weather_api_wasm"
]

[dependencies]
weather_api_common = {path = "weather_api_common/"}
weather_util_rust = {version="0.16", default-features=false, features=["cli"]}
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
anyhow = "1.0"
cached = "0.44"
thiserror = "1.0"
http = "0.2"
tokio = {version="1.24", features=["full"]}
lazy_static = "1.4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
dotenvy = "0.15"
dirs = "5.0"
envy = "0.4"
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], tag="0.15.1-1"}
stack-string = {git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="0.9.1"}
isocountry = "0.3"
derive_more = "0.99"
indexmap = "1.9"
rweb-helper = {git = "https://github.com/ddboline/rweb_helper.git", features=["time"], tag="0.5.0-1"}
dioxus = "0.3"
dioxus-ssr = "0.3"
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
futures = "0.3"
maplit = "1.0"
bytes = "1.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
deadpool = {version = "0.9", features=["serde", "rt_tokio_1"]}
deadpool-postgres = {version="0.10", features=["serde"]}
tokio-postgres = {version="0.7", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
refinery = {version="0.8", features=["tokio-postgres"]}
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.4", features=["deadpool"]}
clap = {version="4.0", features=["derive"]}
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.10.10"}

[dev-dependencies]
reqwest = {version = "0.11", features=["cookies", "rustls-tls", "gzip", "json"], default-features=false}
time-tz = "2.0"

[[bin]]
name = "weather-api-rust"
path = "src/main.rs"
doc = false
