[package]
name = "weather_api_rust"
version = "0.9.17"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "weather-api-rust"
priority = "optional"
section = "rust"
provides = "sync-app-rust"
extended-description = """\
Weather API."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "weather_api_common",
    "weather_app_desktop",
]
exclude = [
    "weather_app_wasm",
    "weather_api_wasm"
]

[dependencies]
weather_api_common = {path = "weather_api_common/"}
anyhow = "1.0"
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.11.13"}
aws-config = {version="1.1", features=["behavior-version-latest"]}
aws-sdk-s3 = "1.12"
bytes = "1.1"
cached = {version="0.50", features=["async", "async_tokio_rt_multi_thread"]}
chrono = "0.4"
clap = {version="4.0", features=["derive"]}
deadpool = {version = "0.11", features=["serde", "rt_tokio_1"]}
deadpool-postgres = {version="0.13", features=["serde"]}
derive_more = "0.99"
dioxus = "0.5"
dioxus-ssr = "0.5"
dirs = "5.0"
env_logger = "0.11"
envy = "0.4"
dotenvy = "0.15"
futures = "0.3"
isocountry = "0.3"
log = "0.4"
maplit = "1.0"
once_cell = "1.0"
parking_lot = "0.12"
polars = {version="0.39", features=["temporal", "parquet", "lazy"]}
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.7", features=["deadpool"]}
postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
rand = "0.8"
refinery = {version="0.8", features=["tokio-postgres"]}
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], tag="0.15.2"}
rweb-helper = {git = "https://github.com/ddboline/rweb_helper.git", features=["time"], tag="0.5.3"}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_yaml = "0.9"
stack-string = {git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="0.9.3"}
thiserror = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.36", features=["rt", "macros", "rt-multi-thread"]}
tokio-postgres = {version="0.7", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
weather_util_rust = {version="0.16", default-features=false, features=["cli"]}
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = {version = "0.12", features=["cookies", "rustls-tls", "gzip", "json"], default-features=false}
time-tz = "2.0"

[[bin]]
name = "weather-api-rust"
path = "src/main.rs"
doc = false
