[package]
name = "weather_api_rust"
version = "0.11.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2024"

[package.metadata.deb]
name = "weather-api-rust"
priority = "optional"
section = "rust"
provides = "sync-app-rust"
extended-description = """\
Weather API."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "weather_api_common",
]
exclude = [
    "weather_app_wasm",
    "weather_api_wasm"
]

[dependencies]
weather_api_common = {path = "weather_api_common/"}
anyhow = "1.0"
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.13.2"}
aws-config = {version="1.8", features=["behavior-version-latest"]}
aws-sdk-s3 = "1.100"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = {version="0.10", features=["cookie"]}
bytes = "1.10"
cached = {version="0.56", features=["async", "async_tokio_rt_multi_thread"]}
chrono = "0.4"
clap = {version="4.5", features=["derive"]}
deadpool = {version = "0.12", features=["serde", "rt_tokio_1"]}
deadpool-postgres = {version="0.14", features=["serde"]}
derive_more = {version="2.0", features=["full"]}
dioxus = "0.6"
dioxus-desktop = "0.6"
dioxus-ssr = "0.6"
dirs = "6.0"
env_logger = "0.11"
envy = "0.4"
dotenvy = "0.15"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
isocountry = "0.3"
log = "0.4"
maplit = "1.0"
mime = "0.3"
parking_lot = "0.12"
polars = {version="0.49", features=["temporal", "parquet", "lazy"]}
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
rand = "0.9"
refinery = {version="0.8", features=["tokio-postgres"]}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_yml = "0.0.12"
stack-string = { version="1.1", features=["postgres_types", "utoipa_types", "axum_types"] }
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.47", features=["rt", "macros", "rt-multi-thread"]}
tokio-postgres = {version="0.7", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
tower-http = {version="0.6", features=["cors"]}
weather_util_rust = {version="0.16", default-features=false, features=["cli"]}
utoipa = { version = "5.4", features = ["axum_extras", "yaml", "time", "uuid", "smallvec", "url", "openapi_extensions", "decimal"] }
utoipa-helper = "0.1"
utoipa-axum = { version = "0.2" }
uuid = { version = "1.17", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = {version = "0.12", features=["cookies", "rustls-tls", "gzip", "json"], default-features=false}
time-tz = "2.0"

[[bin]]
name = "weather-api-rust"
path = "src/main.rs"
doc = false

[[bin]]
name = "weather-app-rust"
path = "src/weather_app_desktop.rs"
doc = false
