[package]
name = "weather_api_common"
version = "0.9.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weather_util_rust = {version="0.16", default-features=false}
dioxus = "0.4"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
anyhow = "1.0"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
futures-channel = "0.3"
futures-util = "0.3"
url = "2.3"
log = "0.4"
parking_lot = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = {version="0.3", features=["Storage", "Window", "Request", "RequestInit", "Response", "Location"]}
http = "1.0"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = {version="0.11", features=["rustls-tls", "json"]}
