[package]
name = "weather_api_common"
version = "0.9.17"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dioxus = "0.5"
dioxus-core = "0.5"
futures-channel = "0.3"
futures-util = "0.3"
log = "0.4"
parking_lot = "0.12"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
url = "2.3"
weather_util_rust = {version="0.16", default-features=false}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = {version="0.3", features=["Storage", "Window", "Request", "RequestInit", "Response", "Location"]}
http = "1.0"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = {version="0.12", features=["rustls-tls", "json"]}
