[package]
name = "weather_api_common"
version = "0.11.6"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dioxus = "0.7"
dioxus-core = "0.7"
dioxus-signals = "0.7"
futures-channel = "0.3"
futures-util = "0.3"
log = "0.4"
parking_lot = "0.12"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
url = "2.5"
weather_util_rust = {version="0.16", default-features=false}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = {version="0.3", features=["Storage", "Window", "Request", "RequestInit", "Response", "Location"]}
http = "1.4"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = {version="0.13", features=["json", "gzip"]}
