[package]
name = "weather_api_wasm"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weather_api_common = {path = "../weather_api_common/"}
dioxus = "0.4"
dioxus-web = "0.4"
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
http = "0.2"
url = "2.3"
serde = "1.0"
serde_json = "1.0"
js-sys = "0.3"
web-sys = {version="0.3", features=["Storage", "Window", "Request", "RequestInit", "Response"]}
weather_util_rust = {version="0.16", default-features=false}
isocountry = "0.3"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
