[package]
name = "weather_api_wasm"
version = "0.10.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
dioxus = "0.6"
dioxus-web = "0.6"
isocountry = "0.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
url = "2.5"
wasm-logger = "0.2"
weather_api_common = {path = "../weather_api_common/"}
weather_util_rust = {version="0.16", default-features=false}
web-sys = {version="0.3", features=["Storage", "Window", "Request", "RequestInit", "Response"]}
