[package]
name = "weather_app_desktop"
version = "0.7.23"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weather_api_common = {path = "../weather_api_common/"}
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
futures-channel = "0.3"
weather_util_rust = {version="0.16", default-features=false, features=["cli"]}
tokio = {version="1.24", features=["full"]}
futures-util = "0.3"
dioxus = "0.3"
dioxus-desktop = "0.3"
parking_lot = "0.12"

[[bin]]
name = "weather-app-rust"
path = "src/main.rs"
doc = false
