[package]
name = "weather_app_wasm"
version = "0.6.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weather_api_common = {path = "../weather_api_common/"}
dioxus = { version = "0.2", features = ["web"] }
weather_util_rust = {version="0.14", default-features=false}
anyhow = "1.0"
lazy_static = "1.4"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
log = "0.4"
wasm-logger = "0.2.0"
serde = "1.0"
url = "2.3"
web-sys = {version="0.3", features=["Geolocation", "Navigator", "Request", "RequestInit", "Response", "Window"]}
js-sys = "0.3"
wasm-bindgen = {version="0.2", features=["serde-serialize"]}
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "0.4"
http = "0.2"
futures-channel = "0.3"
futures-util = "0.3"
getrandom = {version="0.2", features=["js"]}
